--- a/brothers/src/App.css
+++ b/brothers/src/App.css
@@ -140,7 +140,11 @@ html
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: black;
   margin-top: 15%;
-  background-color: rgb(214, 194, 173);
+  padding-bottom: 5%;
+  border-bottom: 5px solid black;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+
   width: 100%;
 
 }
@@ -165,6 +169,121 @@ html
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+#OurProducts2
+{
+  border-top: 5px solid black;
+  margin-top: 10%;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.OurProducts3
+{
+  border-top: 5px solid black;
+  margin-top: 10%;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+#businessCard1
+{
+  margin-top: 15%;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  border-bottom: 5px solid black;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  margin-bottom: 5%;
+  border-style: double;
+}
+#businessCard2
+{
+  border: 5px solid rgb(214, 194, 173);
+  border-radius: 50%;
+  padding-top: 3%;
+  /* padding: 10%; */
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-style:double;
+  /* background-color: rgb(214, 194, 173); */
+
+}
+#businessCard3
+{
+  border-top: 5px solid black;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  border-right: 0px;
+  border-left: 0px;
+  border-bottom: 0px;
+  width: 90%;
+  padding-top: 10%;
+  margin-top: 10%;
+  border-style: double;
+}
+#businessCard4
+{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  border-top: 5px solid rgb(214, 194, 173);
+  border-bottom: 5px solid rgb(214, 194, 173);
+  border-style: double;
+  margin-top: 10%;
+
+}
+.downArrowAnimation
+{
+  animation: upAndDown 1s ease infinite alternate;
+  margin-top: 10%;
+}
+.steps
+{
+  border: 5px solid black;
+  margin-top: 40px;
+  padding: 5%;
+  border-radius: 50%;
+  height: 300px;
+  border-style: double;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.stepsNumbers
+{
+  background-color: black;
+  color: rgb(214, 194, 173);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-bottom: 0px;
+}
+.stepsH3
+{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 13px;
+}
+.h1BusinessCard
+{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: black;
+  margin: 2px;
 }
 .menuForWho
 {
