--- a/brothers/src/App.css
+++ b/brothers/src/App.css
@@ -205,6 +205,11 @@ width: 100%;
   border-bottom-left-radius: 50%;
   border-bottom-right-radius: 50%;
   margin-bottom: 5%;
+  width: 100%;
+  border-right: 0px;
+  border-left: 0px;
+  border-top: 0px;
+
   border-style: double;
 }
 #businessCard2
@@ -241,7 +246,11 @@ width: 100%;
 {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   border-top: 5px solid rgb(214, 194, 173);
+  padding: 10%;
   border-bottom: 5px solid rgb(214, 194, 173);
+  border-right: 0px;
+  border-left: 0px;
+
   border-style: double;
   margin-top: 10%;
 
@@ -254,10 +263,10 @@ width: 100%;
 .steps
 {
   border: 5px solid black;
-  margin-top: 40px;
+  margin-top: 10px;
   padding: 5%;
   border-radius: 50%;
-  height: 300px;
+  height: 320px;
   border-style: double;
   display: flex;
   flex-direction: column;
