--- a/brothers/src/App.css
+++ b/brothers/src/App.css
@@ -274,6 +274,31 @@ width: 100%;
   align-items: center;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+.selection
+{
+  width: 120px;
+  height: 45px;
+  background-color: black;
+  color: rgb(214, 194, 173);
+  text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 20px;
+  border: 5px solid rgb(214, 194, 173);
+  border-radius: 8px;
+  border-style: double;
+}
+option
+{
+  width: 120px;
+  height: 45px;
+  background-color: black;
+  color: rgb(214, 194, 173);
+  text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 20px;
+  border: 5px solid rgb(214, 194, 173);
+  border-radius: 8px;
+}
 .stepsNumbers
 {
   background-color: black;
