--- a/brothers/src/App.css
+++ b/brothers/src/App.css
@@ -31,6 +31,18 @@ html
 {
   width: 30%;
 }
+.signUpInput
+{
+  width: 65%;
+  height: 30px;
+  margin-bottom: 3%;
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 3%;
+  border: 3px solid rgb(214, 194, 173);
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 900;
+}
 .signInInput
 {
   width: 65%;
@@ -139,8 +151,8 @@ html
 {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: black;
-  margin-top: 15%;
-  padding-bottom: 5%;
+  margin-top: 1%;
+  padding-bottom: 2%;
   border-bottom: 5px solid black;
   border-bottom-left-radius: 50%;
   border-bottom-right-radius: 50%;
@@ -199,7 +211,7 @@ width: 100%;
 }
 #businessCard1
 {
-  margin-top: 15%;
+  margin-top: 0%;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   border-bottom: 5px solid black;
   border-bottom-left-radius: 50%;
@@ -318,6 +330,7 @@ option
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: black;
   margin: 2px;
+  font-size: 23px;
 }
 .menuForWho
 {
@@ -350,6 +363,7 @@ option
   border: 3px solid black;
   border-radius: 10px;
   margin-top: 7%;
+  width: 80%;
 }
 
 .menuButtons
@@ -396,8 +410,10 @@ option
   background-color: transparent;
   font-weight: 900;
 }
+
 .mainPageMainDiv
 {
+  padding-top: 20%;
   position: relative;
   animation: 1s ease-out 0s 1 slideInFromLeft;
   display: flex;
@@ -574,4 +590,569 @@ option
   width: 50%;
 
 }
+.openClose
+{
+    width: 8%;
+}
+#mainLogominiu
+{
+  width:25%;
+}
+.menuButtonsFull
+{
+  display: none;
+}
+#menusPhotoFirstPage
+{
+  width: 90%;
+}
+.clickToSTartImage
+{
+ width: 90%; 
+}
+#menuAndCatalogDiv
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+#QRDiv
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#informationsDiv
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#InformationAndQRCodeDiv
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#QRImage
+{
+  width: 90%;
+}
+.exclamationMark
+{
+  width: 10%;
+}
+#WhatAreYouWaitingFor
+{
+  font-size: 40px;
+}
+.mouseDown
+{
+  width: 30%;
+}
+.iWantToGrowUp
+{
+  width: 80%;
+}
+.instagramWhatsapp
+{
+  width: 50%;
+}
+#MiniuLogoFooter
+{
+  width: 50%;
+}
+#ForWho
+{
+  font-size: 30px;
+  display: flex;
 
+}
+#createMenu
+{
+  font-size: 19px;
+}
+#OurProducts4
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+#letsStartOurProducts3
+{
+  font-size: 30px;
+}
+.makeCard
+{
+  width: 80%;
+}
+.LogoForSignUpIn
+{
+  width: 70%;
+}
+
+
+@media (min-width: 1200px){
+  /* <------- HEADER -------> */
+  .appBar
+  {
+    position: fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 1%;
+  left: 0px;
+  right: 0px;
+  top: 0%;
+  background-color: black;
+  padding-bottom: 1%;
+  border-bottom: black solid 5px;
+  }
+  .openClose
+{
+  display: none;
+}
+.menuButtonsFull
+{
+  font-size: 20px;
+  display: flex;
+  background-color: transparent;
+  color: rgb(214, 194, 173);
+  border: none;
+  padding-bottom: 0%;
+  padding-top: 0%;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 900;
+}
+#menuShow
+{
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  align-self: center;
+  width: 30%;
+  right: 0%;
+  top: 10%;
+}
+.menuButtons
+{
+  font-size: 30px;
+  background-color: transparent;
+  color: rgb(214, 194, 173);
+  border: none;
+  padding-bottom: 1%;
+  padding-top: 1%;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 900;
+}
+#mainLogominiu
+{
+  width:10%;
+}
+/* <------- First Page Style -------> */
+.mainPageMainDiv
+{
+  padding-top: 10%;
+  position: relative;
+  animation: 1s ease-out 0s 1 slideInFromLeft;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+#menusPhotoFirstPage
+{
+  width: 30%;
+}
+.h1HomeMainTitle
+{
+  font-size: 40px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.h3HomeMainTitle
+{
+  font-size: 20px;
+  margin: 0px;
+  align-self: center;
+  margin-right: 25px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.waisTime
+{
+  background-color: rgb(214, 194, 173);
+  padding: 2%;
+  width: 80%;
+  font-size: 40px;
+  border-radius: 10px;
+  border: 3px solid rgb(214, 194, 173);
+  /* width: 100%; */
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+}
+.clickToSTartImage
+{
+  width: 30%;
+}
+.menuAndcatalog
+{
+  border: 3px solid black;
+  border-radius: 10px;
+  margin-top: 7%;
+  width: 30%;
+}
+#menuAndCatalogDiv
+{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+}
+#QRDiv
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#informationsDiv
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 5%;
+}
+#InformationAndQRCodeDiv
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 90px;
+  align-items: center;
+
+}
+#QRImage
+{
+  width: 30%;
+}
+.exclamationMark
+{
+  width: 5%;
+}
+#WhatAreYouWaitingFor
+{
+  font-size: 60px;
+}
+.mouseDown
+{
+  width: 10%;
+}
+.namePhoneInput
+{
+  width: 30%;
+  height: 45px;
+  text-align: right;
+  padding: 1%;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 20px;
+  margin-top: 2%;
+  border: 3px solid rgb(214, 194, 173);
+  border-radius: 10px;
+  padding-right: 2%;
+}
+.iWantToGrowUp
+{
+  width: 30%;
+}
+/* <------- Footer -------> */
+.footer
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  bottom: 0px;
+  left: 0px;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  border-top: black solid 5px;
+  background-color: black;
+}
+.footerFont
+{
+  text-decoration: none;
+  color: white;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 25px;
+  margin-top: 3%;
+}
+.instagramWhatsapp
+{
+  width: 20%;
+}
+#MiniuLogoFooter
+{
+  width: 20%;
+}
+/* <------- MainPage -------> */
+#underHeader
+{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: black;
+  margin-top: 0%;
+  padding-bottom: 2%;
+  border-bottom: 5px solid black;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  width: 50%;
+}
+#welcome
+{
+  background-color: black;
+  border: 5px solid black;
+  padding-bottom: 5%;
+  margin-top: 5%;
+  padding-top: 5%;
+  width: 30%;
+  align-self: center;
+  border-bottom-left-radius: 50%  ;
+  border-bottom-right-radius: 50% ;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+#ForWho
+{
+  font-size: 50px;
+  display: none;
+}
+#OurProducts
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.menuAndcatalog
+{
+  border: 3px solid black;
+  border-radius: 10px;
+  margin-top: 7%;
+  width: 45%;
+}
+.menuForWho
+{
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  background-color: rgb(214, 194, 173);
+  border-radius: 10px;
+  width: 90%;
+  padding: 3%;
+  margin-top: 5%;
+  align-self: center;
+}
+#createMenu
+{
+  font-size: 35px;
+}
+.h3Menu
+{
+  font-size: 40px;
+  padding: 0px;
+  margin-bottom: 0px;
+}
+.h4Menu
+{
+  font-weight: 100;
+  font-size: 15px;
+}
+#OurProducts4
+{
+  margin-top: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.signInInput
+{
+  width: 30%;
+  height: 20px;
+  margin-bottom: 3%;
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 2%;
+  border: 3px solid rgb(214, 194, 173);
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 900;
+}
+#letsStartOurProducts3
+{
+  font-size: 40px;
+}
+.OurProducts3
+{
+  border-top: 5px solid black;
+  margin-top: 10%;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+#OurProducts2
+{
+  border-top: 5px solid black;
+  margin-top: 10%;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  border-bottom-left-radius: 10%;
+  border-bottom-right-radius: 10%;
+  border-bottom: 5px solid black;
+  padding-bottom: 5%;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+#businessCard1
+{
+  margin-top: 0%;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  border-bottom: 5px solid black;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  margin-bottom: 5%;
+  width: 50%;
+  border-right: 0px;
+  border-left: 0px;
+  border-top: 0px;
+  border-style: double;
+}
+#businessCard2
+{
+  border: 10px solid rgb(214, 194, 173);
+  border-radius: 50%;
+  padding-top: 10%;
+  /* padding: 10%; */
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-style:double;
+  /* background-color: rgb(214, 194, 173); */
+}
+.h1BusinessCard
+{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: black;
+  margin: 2px;
+  font-size: 30px;
+}
+#businessCard3
+{
+  border-top: 5px solid black;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  border-right: 0px;
+  border-left: 0px;
+  border-bottom: 0px;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5%;
+  margin-top: 10%;
+  border-style: double;
+}
+#businessCard4
+{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  border-top: 5px solid rgb(214, 194, 173);
+  padding: 3%;
+  border-bottom: 5px solid rgb(214, 194, 173);
+  border-right: 0px;
+  border-left: 0px;
+  border-style: double;
+  margin-top: 10%;
+}
+.steps
+{
+  border: 5px solid black;
+  margin-top: 50px;
+  padding: 1%;
+  border-radius: 10%;
+  border-right: 0px;
+  border-left: 0px;
+  width: 50%;
+  height: 400px;
+  border-style: double;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.stepsNumbers
+{
+  background-color: black;
+  color: rgb(214, 194, 173);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-bottom: 0px;
+}
+.stepsH3
+{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 30px;
+}
+.makeCard
+{
+  width: 40%;
+}
+/* <------ Sign UP ------> */
+.LogoForSignUpIn
+{
+  width: 30%;
+}
+.signUpInput
+{
+  width: 50%;
+  height: 40px;
+  margin-bottom: 3%;
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 2%;
+  border: 3px solid rgb(214, 194, 173);
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 900;
+}
+  }
