--- a/brothers/src/App.css
+++ b/brothers/src/App.css
@@ -696,6 +696,256 @@ option
 {
   width: 70%;
 }
+/* ----- OUR CUSTOMERS PAGE ----- */
+.TitlesOurCustomersFull
+{
+  font-size: 25px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: rgb(214, 194, 173);
+  padding: 5%;
+  display: none;
+  border-radius: 10px;
+}
+#scrollDiv
+{
+    width: 100%;
+    /* height: 200px;  */
+    overflow: hidden;
+    position: static;
+    white-space: nowrap;
+    display: flex;
+    
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+#scrollContent {
+  width: 100%;
+  position: relative;
+  flex-direction: row;
+  width: 90%;
+  position: static;
+  display: inline-block;
+  overflow: auto;
+  justify-content: center;
+  align-items: center;
+  /* height: 700px; */
+  border: 3px solid rgb(3, 1, 52);
+  border-radius: 50px;
+  /* background-color: rgb(0, 125, 132); */
+  /* animation: scroll 10s infinite;  */
+}
+#showCustomers
+{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  /* margin-top: 10%; */
+  justify-content: center;
+  align-items: center;
+}
+.scrollCustomerDiv
+{
+  margin-bottom: 20px;
+  border: 5px solid black;
+  width: 90%;
+  position: static;
+  display: inline-block;
+  overflow: auto;
+  /* white-space: nowrap; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 700px;
+  border-radius: 10px;
+  background-color: rgb(0, 125, 132);
+
+}
+.TitlesOurCustomers
+{
+  font-size: 25px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: rgb(214, 194, 173);
+  padding: 5%;
+  border-radius: 10px;
+}
+.ourCustomersBrands
+{
+  width: 60%;
+}
+
+/* ----- ABO JAMEL BUSINESS CARD ----- */
+#abojamelHeader
+{
+  border-bottom: 5px solid rgb(15, 192, 223);
+    border-bottom-left-radius: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#headerTitle
+{
+    font-size: 25px;
+    text-align: center;
+    color: rgb(3, 1, 52);
+    margin-top: 0px;
+    margin-bottom: 15px;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.images
+{
+    width: 15%;
+    margin-left: 8%;
+}
+#mainDivAboJamel
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.redirectDivs
+{
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.redirectTitles
+{
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+font-size: 25px;
+margin-right: 10%;
+}
+.aAboJamel
+{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content:space-between ;
+    align-items: center;
+    text-decoration: none;
+    color: rgb(0, 138, 250);
+    border: 5px solid rgb(3, 1, 52);
+    height: 80px;
+    width: 70%;
+    border-radius: 10px;
+    background-color: rgb(255, 216, 96);
+}
+#miniuDivAboJamel
+{
+    /* bottom: 0px; */
+    /* position: fixed; */
+    justify-content: center;
+    align-items: center;
+    margin-top: 70px;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    align-self: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 10px;
+}
+#designAboJamel
+{
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-bottom: 0px;
+    margin-top: 40px;
+}
+/* ----- Qatr Elnada ----- */
+#QatrElnadaHeader
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#MainLogoQatrElnada
+{
+    margin-top: 20%;
+    width: 50%;
+}
+#WelcomeQatrElnada
+{
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.welcomingQatrElnada
+{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
+    color: wheat;
+    margin-top: 20px;
+    text-align: center;
+}
+#menuDivQatrElnada
+{
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.InnerDivsQatrElnada
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    height: 50px;
+    border: 8px solid wheat;
+    border-radius: 10px;
+
+    background-color: wheat;
+    margin-top: 5%;
+}
+#whatsappQatrElnada
+{
+    text-decoration: none;
+    color: #090C0F;
+    font-size: 25px;
+    align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border-radius: 10px; */
+}
+#LinksMainDivQatrElnada
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin-top: 20px;
+}
+.LinkDivs
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    margin: 10px;
+    width: 60px;
+    background-color: wheat;
+    border-radius: 10px;
+}
+#whatsappImg
+{
+    width: 80%;
+}
+
+@keyframes scroll {
+  0% {
+      transform: translateX(200%);
+  }
+  100% {
+      transform: translateX(-200%);
+  }
+}
 
 
 @media (min-width: 1200px){
@@ -1155,4 +1405,252 @@ option
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: 900;
 }
+/* ----- OUR CUSTOMERS PAGE ----- */
+.TitlesOurCustomersFull
+{
+  font-size: 25px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: rgb(214, 194, 173);
+  padding: 2%;
+  display: flex;
+  border-radius: 10px;
+}
+#scrollDiv
+{
+    width: 100%;
+    /* height: 200px;  */
+    overflow: hidden;
+    position: static;
+    white-space: nowrap;
+    display: flex;
+    
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+#scrollContent {
+  /* width: 100%; */
+  position: relative;
+  flex-direction: row;
+  width: 100%;
+  position: static;
+  display: inline-block;
+  overflow: auto;
+  justify-content: center;
+  align-items: center;
+  /* height: 700px; */
+  height: 400px;
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+  border-right: 0px;
+  border-left: 0px;
+  border-radius: 0px;
+  /* background-color: rgb(0, 125, 132); */
+  /* animation: scroll 10s infinite;  */
+}
+#showCustomers
+{
+  display: flex;
+  width: 90%;
+  flex-direction: row;
+  /* margin-top: 10%; */
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.scrollCustomerDiv
+{
+  margin-bottom: 20px;
+  border: 5px solid black;
+  width: 25%;
+  position: static;
+  display: inline-block;
+  overflow: auto;
+  /* white-space: nowrap; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 900px;
+  border-radius: 10px;
+  background-color: rgb(0, 125, 132);
+
+}
+.TitlesOurCustomers
+{
+  font-size: 25px;
+  display: none;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: rgb(214, 194, 173);
+  padding: 5%;
+  border-radius: 10px;
+}
+.ourCustomersBrands
+{
+  width: 20%;
+}
+
+/* ----- ABO JAMEL BUSINESS CARD ----- */
+#abojamelHeader
+{
+  border-bottom: 5px solid rgb(15, 192, 223);
+    border-bottom-left-radius: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#headerTitle
+{
+    font-size: 25px;
+    text-align: center;
+    color: rgb(3, 1, 52);
+    margin-top: 0px;
+    margin-bottom: 15px;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.images
+{
+    width: 15%;
+    margin-left: 8%;
+}
+#mainDivAboJamel
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.redirectDivs
+{
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.redirectTitles
+{
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+font-size: 25px;
+margin-right: 10%;
+}
+.aAboJamel
+{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content:space-between ;
+    align-items: center;
+    text-decoration: none;
+    color: rgb(0, 138, 250);
+    border: 5px solid rgb(3, 1, 52);
+    height: 80px;
+    width: 70%;
+    border-radius: 10px;
+    background-color: rgb(255, 216, 96);
+}
+#miniuDivAboJamel
+{
+    /* bottom: 0px; */
+    /* position: fixed; */
+    justify-content: center;
+    align-items: center;
+    margin-top: 70px;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    align-self: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 10px;
+}
+#designAboJamel
+{
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-bottom: 0px;
+    margin-top: 40px;
+}
+/* ----- Qatr Elnada ----- */
+#QatrElnadaHeader
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#MainLogoQatrElnada
+{
+    margin-top: 20%;
+    width: 50%;
+}
+#WelcomeQatrElnada
+{
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.welcomingQatrElnada
+{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
+    color: wheat;
+    margin-top: 20px;
+    text-align: center;
+}
+#menuDivQatrElnada
+{
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.InnerDivsQatrElnada
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    height: 50px;
+    border: 8px solid wheat;
+    border-radius: 10px;
+
+    background-color: wheat;
+    margin-top: 5%;
+}
+#whatsappQatrElnada
+{
+    text-decoration: none;
+    color: #090C0F;
+    font-size: 25px;
+    align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border-radius: 10px; */
+}
+#LinksMainDivQatrElnada
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin-top: 20px;
+}
+.LinkDivs
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    margin: 10px;
+    width: 60px;
+    background-color: wheat;
+    border-radius: 10px;
+}
+#whatsappImg
+{
+    width: 80%;
+}
+
   }
