--- a/brothers/src/App.css
+++ b/brothers/src/App.css
@@ -103,13 +103,13 @@ html
     opacity: 0;
     transition: all 1s;
     filter: blur(5px);
-    /* transform: translateY(100%); */
+    /* transform: translateY(-100%); */
 }
 .show
 {
     opacity: 1;
     filter: blur(0);
-    /* transform: translateY(0); */
+    /* transform: translateY(0%); */
 
 }
 #letStartButton
@@ -590,7 +590,7 @@ option
   width: 50%;
 
 }
-.openClose
+#openClose
 {
     width: 8%;
 }
@@ -937,6 +937,118 @@ margin-right: 10%;
 {
     width: 80%;
 }
+#iframe1
+{
+  border: 5px solid black;
+  width: 400px;
+  margin-left: 10px;
+  height: 800px;
+  margin-top: 10px;
+}
+/* ----- Landing Pages ----- */
+#LandingPageMainDiv
+{
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20%;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+#LPTitleDiv
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10%;
+}
+#LPTitle
+{
+  font-size: 25px;
+  border-bottom: 5px solid black;
+  border-radius: 50%;
+  padding-bottom: 5%;
+  border-top: 0px;
+  border-right: 0px;
+  border-left: 0px;
+}
+.LPFirstWebsiteImg
+{
+  width: 95%;
+  border-top: 5px solid black;
+  border-right: 3px solid rgb(214, 194, 173);
+  border-bottom: 3px solid rgb(214, 194, 173);
+  border-left: 5px solid black;
+  border-radius: 10px;
+}
+#LPSecondDiv
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#LPSecondDivTitle
+{
+  font-size: 20px;
+}
+#LPLetsStartButton
+{
+  width: 90%;
+}
+#LPThirdDiv
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+#LPThirdTitle
+{
+  margin-top: 10%;
+}
+.LPDownArrow
+{
+  width: 20%;
+  animation: upAndDown 1s ease infinite alternate;
+  margin-top: 10%;
+}
+#LPSignMainDiv
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
+.LandingPageSignInput
+{
+  width: 65%;
+  height: 30px;
+  margin-bottom: 3%;
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 3%;
+  border: 3px solid rgb(214, 194, 173);
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 900;
+}
+.LPArrow
+{
+  width: 30%;
+  margin-top:40px ;
+  animation: upAndDown 1s ease infinite alternate;
+
+}
+.LPSign
+{
+  width: 65%;
+}
+
+
 
 @keyframes scroll {
   0% {
@@ -947,6 +1059,20 @@ margin-right: 10%;
   }
 }
 
+@keyframes roll {
+  0% {
+      left: 100%; /* Start off the screen on the right */
+      transform: rotate(720deg);
+  }
+  50% {
+      left: calc(50% - 25px); /* Center of the screen */
+      transform: rotate(360deg);
+  }
+  100% {
+      left: -50px; /* Go off the screen on the left */
+      transform: rotate(0deg);
+  }
+}
 
 @media (min-width: 1200px){
   /* <------- HEADER -------> */
@@ -965,7 +1091,7 @@ margin-right: 10%;
   padding-bottom: 1%;
   border-bottom: black solid 5px;
   }
-  .openClose
+  #openClose
 {
   display: none;
 }
@@ -1652,5 +1778,110 @@ margin-right: 10%;
 {
     width: 80%;
 }
+/* ----- Landing Pages ----- */
+#LandingPageMainDiv
+{
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 8%;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+#LPTitleDiv
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10%;
+}
+#LPTitle
+{
+  font-size: 35px;
+  border-bottom: 5px solid black;
+  border-radius: 50%;
+  width: 100%;
+  padding-bottom: 5%;
+  border-top: 0px;
+  border-right: 0px;
+  border-left: 0px;
+}
+.LPFirstWebsiteImg
+{
+  width: 50%;
+  border-top: 5px solid black;
+  border-right: 3px solid rgb(214, 194, 173);
+  border-bottom: 3px solid rgb(214, 194, 173);
+  border-left: 5px solid black;
+  border-radius: 10px;
+}
+#LPSecondDiv
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#LPSecondDivTitle
+{
+  font-size: 30px;
+}
+#LPLetsStartButton
+{
+  width: 40%;
+}
+#LPThirdDiv
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+#LPThirdTitle
+{
+  margin-top: 10%;
+  font-size: 30px;
+}
+.LPDownArrow
+{
+  width: 5%;
+  animation: upAndDown 1s ease infinite alternate;
+  margin-top: 5%;
+}
+#LPSignMainDiv
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
+.LandingPageSignInput
+{
+  width: 30%;
+  height: 20px;
+  margin-bottom: 3%;
+  border-radius: 10px;
+  font-size: 30px;
+  padding: 3%;
+  border: 3px solid rgb(214, 194, 173);
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 900;
+}
+.LPArrow
+{
+  width: 10%;
+  margin-top: 40px;
+  animation: upAndDown 1s ease infinite alternate;
+
+}
+.LPSign
+{
+  width: 30%;
+}
+
 
   }
