--- a/brothers/src/App.css
+++ b/brothers/src/App.css
@@ -87,7 +87,7 @@ html
 }
 #menuShow
 {
-  position: fixed;
+  position:fixed;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -971,9 +971,6 @@ margin-right: 10%;
   border-bottom: 5px solid black;
   border-radius: 50%;
   padding-bottom: 5%;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
 }
 .LPFirstWebsiteImg
 {
@@ -1014,7 +1011,7 @@ margin-right: 10%;
 .LPDownArrow
 {
   width: 20%;
-  animation: upAndDown 1s ease infinite alternate;
+  /* animation: upAndDown 1s ease infinite alternate; */
   margin-top: 10%;
 }
 #LPSignMainDiv
